2019-08-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* ipa-predicate.c (add_condition): Restore inverted test.

2019-08-10  Jakub Jelinek  <jakub@redhat.com>

	* tree-core.h (enum omp_clause_code): Add OMP_CLAUSE_DEVICE_TYPE.
	(enum omp_clause_device_type_kind): New enum.
	(struct tree_omp_clause): Add subcode.device_type_kind.
	* tree.h (OMP_CLAUSE_DEVICE_TYPE_KIND): Define.
	* tree.c (omp_clause_num_ops, omp_clause_code_name): Add entries
	for device_type clause.
	(walk_tree_1): Handle OMP_CLAUSE_DEVICE_TYPE.
	* tree-pretty-print.c (dump_omp_clause): Likewise.

	PR target/91408
	* config/i386/mmx.md (usadv8qi): Use register_operand instead of
	vector_operand.

2019-09-09  Vladimir Makarov  <vmakarov@redhat.com>

	* reload1.c (finish_spills): Do not check ira_conflicts_p when
	handling spilled pseudos.

2019-09-09  Richard Earnshaw  <rearnsha@arm.com>

	PR target/91386
	* config/aarch64/aarch64.c (aarch64_gen_adjusted_ldpstp): Use copy_rtx
	to preserve the contents of the original insns.

2019-08-09  Richard Earnshaw  <rearnsha@arm.com>

	* config/arm/arm.md (addsi3_compare_op1): Add 16-bit thumb-2 variants.
	(addsi3_compare_op2): Likewise.

2019-08-09  Martin Liska  <mliska@suse.cz>

	* alias.c (alias_ptr_types_compatible_p): Strengten
	type comparison in LTO mode.

2019-08-09  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/90313
	* tree-tailcall.c (find_tail_calls): Reject calls that might
	read from an escaped RESULT_DECL.

2019-08-09  Martin Liska  <mliska@suse.cz>

	* doc/invoke.texi: Document the option value.
	* lto-wrapper.c (run_gcc): Set auto_parallel
	only with -flto=auto.

2019-08-09  Martin Liska  <mliska@suse.cz>

	* opts.c (common_handle_option): Error for an invalid argument
	to -flto=.

2019-08-09  Martin Liska  <mliska@suse.cz>

	* ipa-icf.c (sem_function::merge): Define AUTO_DUMP_SCOPE and
	use dump_printf to report optimization.
	(sem_variable::merge): Likwise.
	(sem_item_optimizer::merge_classes): Use dump_printf to report