@@ -1,3 +1,12 @@
+2019-08-12  Richard Biener  <rguenther@suse.de>
+
+	PR driver/91130
+	* lto-wrapper.c (get_options_from_collect_gcc_options): Remove
+	lang_mask option, always use CL_DRIVER.
+	(get_options_from_collect_gcc_options): Adjust.
+	(find_and_merge_options): Likewise.
+	(run_gcc): Likewise.
+
 2019-08-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* ipa-predicate.c (add_condition): Restore inverted test.
